# openbis-oscilloscope

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  idea.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
app/: README.md  config.py  main.py
app/api/: README.md  admin.py  auth.py  devices.py  openbis_structure.py  sessions.py
app/buffer/: README.md  service.py
app/core/: README.md  activity.py  dependencies.py  exceptions.py
app/instruments/: README.md  base_driver.py  driver_rigolDS1000.py  health_monitor.py  manager.py  mock_driver.py  pymeasure_rigol_ds1000.py
app/locks/: README.md  service.py
app/openbis_client/: README.md  client.py
app/scheduler/: README.md  openbis_sync.py  tasks.py
config/: README.md  driver_mapping.yaml  oscilloscopes.yaml  oscilloscopes.yaml.example
deploy/: README.md  openbis-oscilloscope-restart.service  openbis-oscilloscope-restart.timer  openbis-oscilloscope.service
docs/: deployment-apache2-native.md  deployment-apache2.md  deployment-nginx-native.md  deployment.md
drivers/: README.md  RigolDS1000.py  my_oscilloscope.py
openbis_webapp/: README.md  figma_prompt.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
openbis_webapp/src/api/: auth.ts  client.ts  devices.ts  openbis_structure.ts  types.ts  (+1 more)
scripts/: README.md  manual_sync.py  unpack_hdf5.py
tests/: README.md  conftest.py  test_admin.py  test_auth.py  test_buffer.py  test_devices.py  test_locks.py  test_openbis_integration.py  test_sessions.py
(+19 files in other folders)
