[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbis-oscilloscope"
version = "0.2.2"
description = "FastAPI service for LAN-connected oscilloscope control, integrated with OpenBIS"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.0",
    "redis[asyncio]>=5.0",
    "pymeasure>=0.14",
    "pybis>=1.36",
    "apscheduler>=3.11,<4",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "h5py>=3.10",
    "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fakeredis[aioredis]>=2.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Uncomment to run integration tests by default (set env vars for credentials):
# addopts = "--openbis-url=openbis.physik.tu-berlin.de --openbis-token=${OPENBIS_TOKEN}"

[tool.hatch.build.targets.wheel]
packages = ["app"]
